Fixing issues in PandaboardIndicator.